--- a/Pages/Logs.razor
+++ b/Pages/Logs.razor
@@ -7,7 +7,7 @@
         i = 0;
         foreach (string stroke in text)
         {
-            if (str == null)
+            if (str == null || str == "")
             {
                 <div>@stroke  </div>
             }
